fix: a11y issues - color contrast

--- a/ecep_assets/site.css
+++ b/ecep_assets/site.css
@@ -22,17 +22,10 @@
 :root {
   /* Color */
   /* https://github.com/TACC/Core-Styles/blob/v2.53.1/src/lib/_imports/settings/color--cms.auto.css */
-  --global-color-primary--x-light: oklch( from var(--ecep-accent-gray) 96.875% c h );
-  --global-color-primary--light: oklch( from var(--ecep-accent-gray) 75% c h );
-  --global-color-primary--normal: var(--ecep-accent-gray );
-  --global-color-primary--dark: oklch( from var(--ecep-accent-gray) 40% c h );
-  --global-color-primary--x-dark: oklch( from var(--ecep-accent-gray) 33.3% c h );
-  --global-color-primary--xx-dark: oklch( from var(--ecep-accent-gray) 25% c h );
-
   --global-color-accent--xxx-light: oklch( from var(--ecep-purple) 93.5% c h );
   --global-color-accent--xx-light: oklch( from var(--ecep-purple) 89.4% c h );
   --global-color-accent--x-light: oklch( from var(--ecep-purple) 82.8% c h );
-  --global-color-accent--light: oklch( from var(--ecep-purple) 54.5% c h );
+  --global-color-accent--light: oklch( from var(--ecep-purple) 55% c h );
   --global-color-accent--normal: var(--ecep-purple);
   --global-color-accent--dark: oklch( from var(--ecep-purple) 20% c h );
   --global-color-accent--x-dark: oklch( from var(--ecep-purple) 0% c h );
@@ -113,4 +106,11 @@ article.post-detail .byline {
 /* https://github.com/TACC/Core-Styles/blob/v2.38.0/src/lib/_imports/trumps/s-header.css#L24 */
 .s-header {
   --height: 70px;
+}
+
+
+/* Footer */
+
+.s-footer {
+    --header-bkgd-color: var(--global-color-primary--xx-dark);
 }
